--- a/responsivewebsiteangular12-master/src/app/pages/contact/contact.component.html
+++ b/responsivewebsiteangular12-master/src/app/pages/contact/contact.component.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="">Virtusa Grounds</a>
+    <a class="navbar-brand" routerLink="">Rapid Grounds</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -34,8 +34,6 @@
   <h3 style="font-size:50px">Manager : Aravind</h3>
   <h3>987654320</h3>
   <h3>chennai</h3>
-  <h3 style="font-size:50px">Manager : Jaisuriya</h3>
-  <h3>987654322</h3>
-  <h3>chennai</h3>
+  
 </div>
 
